@@ -1,4 +1,5 @@
 12-09-2018
+- Added infinite loop check
 - Fixed group buy prices
 - Fixed no more bonus from Malus
 
